@@ -13,6 +13,7 @@ UTILS:
 * UTIL develop | introduce new script - display-xpath-value  - display-xpath-for-node-filter
 * UTIL UI | per-default always set shadow-ignoreinvalidaddressobjects
 * UTIL pan-os-php type=xml-issue | introduce new check if address/-group/service/-group/secRule/natRule objectname has double spaces in it
+* UTIL type=xml-issue | introduce additional validation if service/-group is available with name 'application-default'
 
 BUGFIX:
 * UTIL UI - still in BETA - bugfix to create correct JSON playbook file if location argument is used
